fix: hidden overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 
 html {
   font-size: 1rem;
+  overflow: hidden;
 }
 
 * {
@@ -18,6 +19,7 @@ html {
 body {
   background: #fafcff;
   margin: 0;
+  overflow: hidden;
 }
 
 @font-face {
